--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Chat App</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
     <input id="m" autocomplete="off" /><button>Send</button>
   </form>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="public/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
